--- a/docs/bibliograpy.bib
+++ b/docs/bibliograpy.bib
@@ -1,8 +1,91 @@
-@article{Schmidt2023,
-  author = {Schmidt, A. and Müller, B.},
-  title = {Raketenwissenschaft im 21. Jahrhundert},
-  journal = {Wissenschaftliche Studien},
-  year = {2023},
-  volume = {58},
-  pages = {1--20}
+@article{Chopra_2020,
+doi = {10.1088/1742-6596/1432/1/012083},
+url = {https://dx.doi.org/10.1088/1742-6596/1432/1/012083},
+year = {2020},
+month = {jan},
+publisher = {IOP Publishing},
+volume = {1432},
+number = {1},
+pages = {012083},
+author = {Chopra, Ashok},
+title = {Paradigm shift and challenges in IoT security},
+journal = {Journal of Physics: Conference Series},
+abstract = {All Our world is experiencing major technological changes and this time it is cantered not on internet but Internet of Things. Actually, Internet of Things is sincere effort to connect all unconnected especially smart objects by doing so human wants to challenge their own way of thinking that shouldn’t all objects be connected to one central network and among themselves so that as human we can control them all. So, paradigm is let us provide capability of objects to exhibit the ability to communicate to each other as well to one central system thus to human beings. This effort would certainly bring new improvements and efficiency in our lives. It is this very premise behind Internet of Things (IoT) that would see new transformation and revolution in industrial world from manufacturing, logistics and supply chain in current industrial world of 4.0 and future newer versions. Over last few decades Information Technology (IT) has been witnessing strong and active cyberattacks and creating protection threats to the cyber security networks. Information Technology industry has learnt lot from these threats and have also documented them to find right and appropriate solutions. In contrast Operational Technology environment surrounding Information Technology were kept in abeyance in many organizations. Thus one hardly finds history and documentation of cyberattacks systems built around operational technology. This also makes fewer learning opportunities and record of catalogued incidents and their corresponding risk mitigation strategy not rich in record. It is worth knowing that the world of operational technology addresses wider scope and higher depth in comparison to Information technology. In Operational Technology the word security and safety are synonymous with each other. It is reality that many of the industrial security standard also incorporate equipment, instruments and safety recommendation by experts thus lay the foundation of IoT security. This paper provides a historical perspective of Operational Technology security, the security system measure, how over a period of last few decades the subject matter has evolved, what are few of the real challenges industry is facing. The final phase of paper focuses on some of the real practical measures and steps have been to taken to in creating more safe and secure industrial environment including best practices in creating synergy between Information Technology networks security and old aged legacy industrial environments.}
 }
+
+@misc{oddbitUsingDocker,
+	author = {},
+	title = {{U}sing {D}ocker macvlan networks --- blog.oddbit.com},
+	howpublished = {\url{https://blog.oddbit.com/post/2018-03-12-using-docker-macvlan-networks/}},
+	note = {[Accessed 24-09-2025]},
+}
+
+@misc{shapeOptimizingNginx,
+	author = {Christian Wells},
+	title = {{O}ptimizing {N}ginx {C}onfiguration for {V}ue.js {S}{P}{A}: {K}ey {S}teps - {S}hapehost --- shape.host},
+	howpublished = {\url{https://shape.host/resources/nginx-configuration-for-a-vue-js-spa-setting-up-a-single-page-application-built-with-vue-js-on-nginx-2}},
+	note = {[Accessed 24-09-2025]},
+}
+
+@misc{spring-sec,
+	author = {},
+	title = {},
+	howpublished = {\url{https://shape.host/resources/nginx-configuration-for-a-https://github.com/ali-bouali/spring-boot-3-jwt-security/blob/main/jwt-security.drawio}},
+	note = {[Accessed 24-09-2025]},
+}
+
+@misc{springMethodSecurity,
+	author = {},
+	title = {{M}ethod {S}ecurity :: {S}pring {S}ecurity --- docs.spring.io},
+	howpublished = {\url{https://docs.spring.io/spring-security/reference/servlet/authorization/method-security.html#use-preauthorize}},
+	note = {[Accessed 24-09-2025]},
+}
+
+@article{article,
+author = {Harjanti, Trinugi and Setiyani, Hari and Trianto, Joko},
+year = {2022},
+month = {12},
+pages = {40-49},
+title = {Load Balancing Analysis Using Round-Robin and Least-Connection Algorithms for Server Service Response Time},
+volume = {5},
+journal = {Applied Technology and Computing Science Journal},
+doi = {10.33086/atcsj.v5i2.3743}
+}
+
+@misc{geeksforgeeksNetworkLoad,
+	author = {},
+	title = {{N}etwork {L}oad {B}alancing: {R}ound {R}obin vs {L}east {C}onnections - {G}eeksfor{G}eeks --- geeksforgeeks.org},
+	howpublished = {\url{https://www.geeksforgeeks.org/computer-networks/network-load-balancing-round-robin-vs-least-connections/}},
+	note = {[Accessed 24-09-2025]},
+}
+
+@inproceedings{cabral2021advanced,
+  title={Advanced cowrie configuration to increase honeypot deceptiveness},
+  author={Cabral, Warren Z and Valli, Craig and Sikos, Leslie F and Wakeling, Samuel G},
+  booktitle={IFIP International Conference on ICT Systems Security and Privacy Protection},
+  pages={317--331},
+  year={2021},
+  organization={Springer}
+}
+
+@misc{dockerMacvlan,
+	author = {},
+	title = {Macvlan network driver --- docs.docker.com},
+	howpublished = {\url{https://docs.docker.com/engine/network/drivers/macvlan/}},
+	note = {[Accessed 25-09-2025]},
+}
+
+@misc{wiresharkWifiCapture,
+	author = {},
+	title = {WLAN (IEEE 802.11) capture setup --- wiki.wireshark.org},
+	howpublished = {\url{https://wiki.wireshark.org/CaptureSetup/WLAN}},
+	note = {[Accessed 25-09-2025]},
+}
+
+@misc{vethManPage,
+	author = {},
+	title = {veth(4) — Linux manual page --- man7.org},
+	howpublished = {\url{https://man7.org/linux/man-pages/man4/veth.4.html}},
+	note = {[Accessed 25-09-2025]},
+}
+
