--- a/docs/bibliograpy.bib
+++ b/docs/bibliograpy.bib
@@ -27,11 +27,11 @@ abstract = {All Our world is experiencing major technological changes and this t
 	note = {[Accessed 24-09-2025]},
 }
 
-@misc{spring-sec,
+@misc{githubSpringboot3jwtsecurityjwtsecuritydrawioMain,
 	author = {},
-	title = {},
-	howpublished = {\url{https://shape.host/resources/nginx-configuration-for-a-https://github.com/ali-bouali/spring-boot-3-jwt-security/blob/main/jwt-security.drawio}},
-	note = {[Accessed 24-09-2025]},
+	title = {spring-boot-3-jwt-security/jwt-security.drawio at main · ali-bouali/spring-boot-3-jwt-security --- github.com},
+	howpublished = {\url{https://github.com/ali-bouali/spring-boot-3-jwt-security/blob/main/jwt-security.drawio}},
+	note = {[Accessed 26-09-2025]},
 }
 
 @misc{springMethodSecurity,
@@ -89,3 +89,17 @@ doi = {10.33086/atcsj.v5i2.3743}
 	note = {[Accessed 25-09-2025]},
 }
 
+@article{DYMORA2023,
+  title = {Comparison of Angular,  React,  and Vue Technologies in the Process of Creating Web Applications on the User Interface Side},
+  volume = {4},
+  ISSN = {2719-6550},
+  url = {http://dx.doi.org/10.15584/jetacomps.2023.4.21},
+  DOI = {10.15584/jetacomps.2023.4.21},
+  number = {34},
+  journal = {Journal of Education,  Technology and Computer Science},
+  publisher = {University of Rzeszow},
+  author = {DYMORA,  PAWEŁ and MAZUREK,  MIROSŁAW and NYCZ,  MARIUSZ},
+  year = {2023},
+  month = dec,
+  pages = {210–222}
+}
